ツールを追加

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,12 +8,21 @@
 <body>
     <div id="container" style="visibility: hidden;">
         <header>
-            <h1>Blositeへようこそ</h1>
-            <p></p>
+            <div class="header-container">
+              <a href="#" class="header-logo">Blosite</a>
+              <!-- <sub>by ut.code();</sub> -->
+              <nav>
+                <ul class="nav-links">
+                    <li><a href="./..">トップページに戻る</a></li>
+                    <li id="header-help"><a>ヘルプ</a></li>
+                    <li><a href="#">Q&A</a></li>
+                </ul>
+              </nav>
+            </div>
         </header>
         <div class="content">
             <div class="card" id="about">
-                <h2>Blositeとは？</h2>
+                <h2>Blositeへようこそ!</h2>
                 <p>Blositeでは、直感的に操作しやすいブロックプログラミングでWebページを作ることができます。
                     プログラミングが初めての方でも気軽に楽しめます！
                 </p>
