--- a/frontend/src/tutorial/index.html
+++ b/frontend/src/tutorial/index.html
@@ -8,8 +8,17 @@
 <body>
     <div id="content" style="visibility: hidden;">
         <header>
-            <h1>チュートリアル</h1>
-            <a href="./.." class="btn">トップページに戻る</a>
+            <div class="header-container">
+              <a href="#" class="header-logo">Blosite</a>
+              <!-- <sub>by ut.code();</sub> -->
+              <nav>
+                <ul class="nav-links">
+                    <li><a href="./..">トップページに戻る</a></li>
+                    <li id="header-help"><a>ヘルプ</a></li>
+                    <li><a href="#">Q&A</a></li>
+                </ul>
+              </nav>
+            </div>
         </header>
         <section>
             <div class="group-title">まずはじめに</div>
