--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blosite</title>
+    <link rel="icon" href="<%= require('/src/images/icon.svg') %>">
 </head>
 <body>
     <div id="container" style="visibility: hidden;">
         <header>
             <div class="header-container">
-              <a href="#" class="header-logo">Blosite</a>
+              <a href="#" class="header-logo"><img id="header-icon" src="<%= require('/src/images/icon.svg') %>">Blosite</a>
               <!-- <sub>by ut.code();</sub> -->
               <nav>
                 <ul class="nav-links">
                     <li><a href="./..">トップページに戻る</a></li>
-                    <li id="header-help"><a>ヘルプ</a></li>
-                    <li><a href="#">Q&A</a></li>
                 </ul>
               </nav>
             </div>
