--- a/frontend/src/sandbox/index.html
+++ b/frontend/src/sandbox/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8" />
-    <title>Blockly Sample App</title>
+    <meta charset="utf-8"/>
+    <title>サンドボックス</title>
+    <link rel="icon" href="<%= require('/src/images/icon.svg') %>">
   </head>
   <body>
     <div id="content" style="visibility: hidden;">
@@ -41,7 +42,7 @@
               <!-- メニュー -->
               <ul class="menu">
                 <li id="code-button">コードを表示</li>
-                <li id="run-switch-button">常時実行:OFF</li>
+                <li id="run-switch-button">スクリプトの<br>常時実行:OFF</li>
                 <li id="save-button">共有する</li>
                 <li>プレビューを全画面で表示</li>
                 <li></li>
