preview追加　sandbox以外sessionStorageに変更

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,11 +12,11 @@
             <div class="header-container">
               <a href="#" class="header-logo"><img id="header-icon" src="<%= require('/src/images/icon.svg') %>">Blosite</a>
               <!-- <sub>by ut.code();</sub> -->
-              <nav>
+              <!-- <nav>
                 <ul class="nav-links">
                     <li><a href="./..">トップページに戻る</a></li>
                 </ul>
-              </nav>
+              </nav> -->
             </div>
         </header>
         <div class="content">
@@ -25,7 +25,7 @@
                 <p>Blositeでは、直感的に操作しやすいブロックプログラミングでWebページを作ることができます。
                     プログラミングが初めての方でも気軽に楽しめます！
                 </p>
-                <a href="" class="btn">ut.code(); 駒場祭ウェブサイトに戻る</a>
+                <a href="https://kf75.utcode.net/" class="btn">ut.code(); 駒場祭ウェブサイトに戻る</a>
             </div>
             <div class="card">
                 <h2>チュートリアル</h2>
