--- a/frontend/src/sandbox/index.html
+++ b/frontend/src/sandbox/index.html
@@ -15,8 +15,7 @@
           <nav>
             <ul class="nav-links">
                 <li><a href="./..">トップページに戻る</a></li>
-                <li id="header-help"><a>ヘルプ</a></li>
-                <li><a href="#">Q&A</a></li>
+                <li><a href="./../tutorial">チュートリアルへ移動</a></li>
             </ul>
           </nav>
         </div>
@@ -44,7 +43,7 @@
                 <li id="code-button">コードを表示</li>
                 <li id="run-switch-button">スクリプトの<br>常時実行:OFF</li>
                 <li id="save-button">共有する</li>
-                <li>プレビューを全画面で表示</li>
+                <li id="preview-button">プレビューを全画面で表示</li>
                 <li></li>
               </ul>
             </div>
