ローディングのUIを追加

--- a/frontend/src/share/index.html
+++ b/frontend/src/share/index.html
@@ -19,7 +19,9 @@
     </header>
     <h1>コンテンツ一覧</h1>
     <a href="./.." class="btn">トップページに戻る</a>
-    <div id="contents-list"></div>
+    <div id="contents-list">
+        <div id="loading-spinner"></div>
+    </div>
     <div id="popup" class="popup hidden">
         <div class="popup-content">
             <p id="popup-message">このページに移動してもよろしいですか？</p>
