--- a/frontend/src/sandbox/index.html
+++ b/frontend/src/sandbox/index.html
@@ -27,8 +27,6 @@
             <div id="output"></div>
             <pre id="generatedCode" class="beforeClicked"><code></code></pre>
             <div id="error-message"></div>
-            <!-- <button id="code-button">コードを表示する</button> -->
-            <!-- <button id="save-button">保存する</button> -->
           </div>
           <div id="blocklyDiv">
             <div id="icon-container">
@@ -43,31 +41,12 @@
                 <li id="code-button">コードを表示</li>
                 <li id="run-switch-button">スクリプトの<br>常時実行:OFF</li>
                 <li id="save-button">共有する</li>
-                <li id="preview-button">プレビューを全画面で表示</li>
+                <li id="preview-button">プレビューを<br>全画面で表示</li>
                 <li></li>
               </ul>
             </div>
           </div>
         </div>
-        <!-- <div id="popup">
-          <div id="popup-outer"></div>
-          <div id="popup-inner">
-            <div id="popup-title">ポップアップタイトル</div>
-            <div id="popup-close">×</div>
-            <div id="popup-button-container">
-              <button class="popup-buttons" id="popup-button-0">ボタン1</button>
-            </div>
-            <div id="popup-message"> -->
-              <!-- ここにスライドコンテンツを表示 -->
-              <!-- <div class="popup-slides" id="popupSlide-0"></div>
-            </div>
-            <div id="popup-navigation">
-              <button id="popup-prev">戻る</button>
-              <button id="popup-next">進む</button>
-              <button id="popup-end">始める</button>
-            </div>
-          </div>
-        </div> -->
         <div id="popup-outer" style="display:none;"></div>
         <div id="popup-form">
           <form id="content-form">
