共有を修正

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -52,7 +52,7 @@
           <div class="card-text">
             <h2>ゼロから作ろう</h2>
             <p>自由にブロックを配置して<br>自分なりのサイトを作ってみよう！</p>
-            <a href="./sandbox" class="btn">サンドボックスページへ</a>
+            <a href="./sandbox" class="btn">サンドボックスへ</a>
           </div>
           <img
             id="card-img"
