共有ページのUI調整

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -69,7 +69,7 @@
         <div class="card">
           <div>
             <h2>困ったときは</h2>
-            <div>
+            <div id="help-menu">
                 <details>
                     <summary>作ったサイトはどうやって共有すればいいのですか？</summary>
                     <p>
