--- a/frontend/src/tutorial/dom-manipulation/index.html
+++ b/frontend/src/tutorial/dom-manipulation/index.html
@@ -8,7 +8,8 @@
     <div id="content" style="visibility: hidden;">
       <header>
         <div class="header-container">
-          <a href="#" class="header-logo">Blosite</a>
+          <div class="header-logo">
+            <img id="header-icon" src="<%= require('/src/images/icon.svg') %>">Blosite</div>
           <!-- <sub>by ut.code();</sub> -->
           <nav>
             <ul class="nav-links">
@@ -90,7 +91,7 @@
                 <section>
                   <h3>DOM</h3>
                   <p>
-                    <em>DOM</em>(Document Object Model)とは、HTMLの構造を表現したものです。<br>
+                    <b>DOM</b>(Document Object Model)とは、HTMLの構造を表現したものです。<br>
                     このDOMを通して、HTML内の要素を取り出したり、その取り出した要素を変更したり、また新たに要素を追加することができます。<br>
                     DOMの操作はJavascriptで行われます。つまり&lt;script&gt;タグ内にブロックを配置するということです。<br>
                   </p>
