共有ページのUI調整

--- a/frontend/src/sandbox/index.html
+++ b/frontend/src/sandbox/index.html
@@ -50,7 +50,7 @@
         <div id="popup-outer" style="display:none;"></div>
         <div id="popup-form">
           <form id="content-form">
-            <label for="username">ユーザーの名前:</label>
+            <label for="username">投稿者の名前:</label>
             <input type="text" id="username" name="username" maxlength="15" required><br><br>
     
             <label for="contentName">ウェブサイトの名前:</label>
