--- a/frontend/src/share/index.html
+++ b/frontend/src/share/index.html
@@ -24,9 +24,9 @@
     </div>
     <div id="popup" class="popup hidden">
         <div class="popup-content">
-            <p id="popup-message">このページに移動してもよろしいですか？</p>
-            <button id="confirmButton">はい</button>
-            <button id="cancelButton">キャンセル</button>
+            <p id="popup-message"></p>
+            <button id="confirm-button">進む</button>
+            <button id="cancel-button">キャンセル</button>
         </div>
     </div>
     <footer>
