--- a/Blockly/src/tutorial/omikuji/index.html
+++ b/Blockly/src/tutorial/omikuji/index.html
@@ -56,6 +56,10 @@
                   <h3>目標</h3>
                   <p>ボタンを押すとおみくじの結果が出てくるプログラミングを作成しよう。</p>
                   <p>次のページからはヒントなので自信のある人はヒントを見ないでやってみよう！</p>
+                  <h3>例</h3>
+                  <img src ="<%= require('/src/images/omikujirei.gif')%>"alt="Description of image" width="400" height="240"></img>
+                  
+                  
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: none;">
