--- a/Blockly/src/tutorial/css-introduction/index.html
+++ b/Blockly/src/tutorial/css-introduction/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>チュートリアル：表計算</title>
-  </head>
+    <title>Blockly Sample App</title>
+</head>
   <body>
     <div id="content" style="visibility: hidden;">
       <header>
@@ -35,77 +35,77 @@
           </div>
           <div id="blocklyDiv"></div>
         </div>
+        <!--
+        <label for="popupflag1">popup 1</label>
+        <input type="checkbox" class="popup-flag1" id="popupFlag1">
+        <label class="popup-background" for="popupFlag1"></label>
+        <div class="popup">
+          <label class="close-button" for="popupFlag1">×</label>
+          <div class="content">
+            content
+          </div>
+        </div>
+        --->
         <div id="popup">
           <div id="popup-outer"></div>
           <div id="popup-inner">
-            <div id="popup-title">表計算</div>
+            <div id="popup-title">CSSについて知ろう</div>
             <div id="popup-close">×</div>
             <div id="popup-button-container">
-              <button class="popup-buttons" id="popup-button-0">目標</button>
+              <button class="popup-buttons" id="popup-button-0">CSSとは</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-1">HTMLの構成</button>
+              <button class="popup-buttons" id="popup-button-1">実際にやってみよう</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-2">さまざまな処理</button>
+              <button class="popup-buttons" id="popup-button-2">様々なCSSを同時に使ってみよう</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-3">独自の機能を追加</button>
+              <button class="popup-buttons" id="popup-button-3">ヒント</button>
             </div>
             <div id="popup-message">
               <!-- ここにスライドコンテンツを表示 -->
               <div class="popup-slides" id="popupSlide-0">
                 <section>
-                  <h3>目標</h3>
-                  <p>表に値を入力し、行ごとの総和や平均が出力されるプログラムを作ってみよう！</p>
-                  <h3>詳細</h3>
+                  <h2>CSS</h2>
                   <p>
-                    ３✕３の表のうち、一行目には「一列目」「二列目」「計算結果」と表示させ、他の行の一、二列目には数字を入力する箇所を、三列目には列ごとの計算結果を表示する場所を作りましょう。<br>
-                    また、行ごとの計算方法を選択できるメニューと、押すと計算結果が表示されるボタンも置きましょう。<br>
-                    <br>
-                    自信のある方は次の説明を見ずに自分で一から作ってみましょう！<br>
+                  &emsp;今まではhtmlとは何かについて学びました。htmlがウェブサイトの構造を表す言語だったのに対してCSSはウェブサイトの見た目を<br>
+                  表す言語です。blositeではstyle属性をhtml要素に加えることでCSSを記述して見た目を変更することができます。style属性を追加する<br>
+                  には左上のHTMLAttributesの中に入っているstyleと書かれたブロックを使います。
                   </p>
+                  <img
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: none;">
-                <section>
-                  <h3>HTML</h3>
+                <section style="display: inline;">
+                  <h2>styleブロックの使い方</h2>
                   <p>
-                    まずは&lt;table&gt;などを利用して表を作ってみましょう。<br>
-                    その後、&lt;input&gt;を使って値を入力する箇所を、&lt;button&gt;を使って計算を行うボタンを、&lt;select&gt;で計算方法を選べるメニューを作成します。&lt;input&gt;には、type = numberを設定するとよいでしょう。<br>
-                    数値を取得する、計算結果を表示するためにidも設定しておきましょう。<br>
+                    &emsp;styleブロックの中には歯車が入っています。その歯車をクリックすると右の画像のように項目がでてきます。項目と書かれたブロックをドラッグすることで接続する部分の数を変更することができます。
                   </p>
-                  <h3>CSS</h3>
+                  <h2>色を変えてみよう</h2>
                   <p>
-                    つぎはCSSを使って自分の思うままにスタイルを設定してみましょう。&lt;style&gt;タグを使ってその中にCSSを記述します。<br>
-                    &lt;td&gt;や&lt;th&gt;にはborderを、&lt;table&gt;にはborder-collapse: collapseを設定することで、それらしいボーダーが表示されるようになります。<br>
-                    ある程度できたら次に進みましょう。<br>
+                    &emsp;まずは実際に文字の色を変えてみましょう。HTMLを知ろうのところで作成した遠足の持ち物リス<br>
+                    トがあるのでその文字の色を変えてみましょう。
+                    文字の色を変えるにはstyleブロックにCSSカテゴリーに含まれているcolorブロックを使います。色は色コードを入力するか色の名前を英語で入力することで変更することができます。
+                  </p>
                 </section>
+                <img src ="<%= require('/src/images/styleblock.gif')%>"alt="Description of image" width="240" height="150" ></img>
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: none;">
-                <section>
-                  <h3>値の取得</h3>
+                <section style="display: inline-block;">
+                  <h2>下の画像のようなものを作ってみよう</h2>
                   <p>
-                    JavaScriptを使って、入力された値の取得、計算、表示を行いましょう。&lt;script&gt;タグを使ってその中にJavaScriptを記述します。<br>
-                    前もって設定しておいたidの要素を取得するには、「id="～"の要素」ブロックを使いましょう。必要であれば、取得した要素を変数にセットしましょう。<br>
-                    &lt;input&gt;に入力された値を読み取るには「要素内の値を取得」ブロックを、&lt;select&gt;の選択には「要素内の文章を取得」を使いましょう。<br>
+                  &emsp;先ほどは文字の色だけを変更してもらいましたがCSSでできるのは文字の色の変更だけではありません。今度は背景の色と文字の配置を変えてみましょう。
+                  右の画像と同じものを作ってみましょう。
                   </p>
-                  <h3>計算</h3>
+                  <img src ="<%= require('/src/images/cssexample.png')%>"alt="Description of image" width ="360" height="150" ></img>
                   <p>
-                    取得した値を使って計算を行いましょう。&lt;select&gt;で選択された値によって、計算方法を変えるには、logic内の「もし～実行～」ブロックなどを使って別々の計算をしましょう。<br>
-                    計算をする前に気をつけなければならないことがあります。それは、「要素内の値を取得」で取得した値は文字列として扱われるため、計算を行う際には数値に変換する必要があるということです。「～を～に変換」ブロックを使いましょう。<br>
-                    そうしたら、Math内のブロックで計算をしましょう。必要であれば、計算結果も変数にセットしておきましょう。<br>
-                  <h3>表示</h3>
-                  <p>
-                    最後に、計算結果を表示するようにしましょう。ボタンを押すと結果が表示されるようにするために、「～にイベントクリックが発生したときに～」ブロックを使いましょう。ここで注意点ですが、このブロックの内部で&lt;input&gt;の値を取得するようにしてください。そうしないと、取得されるのがinputに何も入っていない最初の一回だけとなり正常に動作しません。計算処理もこのブロックの中に入れ込みましょう。<br>
-                    表示については、「～を～に代入」ブロックを使って、要素内の値を変更することができます。<br>
+                    ここではまず背景の色は黄色になっています。また見出しの遠足の持ち物の位置が中央になるようになっていて、持ち物の内容の色が青色になっています。
                   </p>
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-3" style="display: none;">
                 <section>
-                  <h3>機能追加</h3>
+                  <h2>ヒント</h2>
                   <p>
-                    ここまでできたら、さらに機能を追加してみましょう。<br>
-                    「こんなのができたらいいな～」、「こんな機能があったら便利だな～」と想像を膨らませ、趣くままに作ってみましょう。<br>
-                    考えられる機能としては例えば、行の追加や削除機能、列の追加や削除機能、セルの色を変える機能などが挙げられます。<br>
+                    &emsp;背景の色を変えるにはbackground-colorブロックを使いましょう。色の指定の仕方はcolorブロックと同じです。文字の位置の変え方はいくつかの方法がありますが、今回はtext-alignブロックを使ってみましょう。text-alignブロックは特定の値しか入れることができないので注意してください。
                   </p>
                 </section>
               </div>
