--- a/Blockly/src/tutorial/html-introduction/index.html
+++ b/Blockly/src/tutorial/html-introduction/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>チュートリアル：表計算</title>
+    <title>Blockly Sample App</title>
   </head>
   <body>
     <div id="content" style="visibility: hidden;">
@@ -35,78 +35,85 @@
           </div>
           <div id="blocklyDiv"></div>
         </div>
+        <!--
+        <label for="popupflag1">popup 1</label>
+        <input type="checkbox" class="popup-flag1" id="popupFlag1">
+        <label class="popup-background" for="popupFlag1"></label>
+        <div class="popup">
+          <label class="close-button" for="popupFlag1">×</label>
+          <div class="content">
+            content
+          </div>
+        </div>
+        --->
         <div id="popup">
           <div id="popup-outer"></div>
           <div id="popup-inner">
-            <div id="popup-title">表計算</div>
+            <div id="popup-title">HTMLについて知ろう</div>
             <div id="popup-close">×</div>
             <div id="popup-button-container">
-              <button class="popup-buttons" id="popup-button-0">目標</button>
+              <button class="popup-buttons" id="popup-button-0">HTMLとは</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-1">HTMLの構成</button>
+              <button class="popup-buttons" id="popup-button-1">実際にやってみよう</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-2">さまざまな処理</button>
+              <button class="popup-buttons" id="popup-button-2">持ち物リストを作ってみよう</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-3">独自の機能を追加</button>
+              <button class="popup-buttons" id="popup-button-3">ヒント</button>
             </div>
             <div id="popup-message">
               <!-- ここにスライドコンテンツを表示 -->
               <div class="popup-slides" id="popupSlide-0">
                 <section>
-                  <h3>目標</h3>
-                  <p>表に値を入力し、行ごとの総和や平均が出力されるプログラムを作ってみよう！</p>
-                  <h3>詳細</h3>
+                  <h2>HTMLについて</h2>
                   <p>
-                    ３✕３の表のうち、一行目には「一列目」「二列目」「計算結果」と表示させ、他の行の一、二列目には数字を入力する箇所を、三列目には列ごとの計算結果を表示する場所を作りましょう。<br>
-                    また、行ごとの計算方法を選択できるメニューと、押すと計算結果が表示されるボタンも置きましょう。<br>
-                    <br>
-                    自信のある方は次の説明を見ずに自分で一から作ってみましょう！<br>
+                    &emsp;HTMLはプログラミング言語のひとつで普段皆さんが使っているウェブサイトの構造を書き表すことができます。左下の画像のように
+                    htmlは入れ子構造で書かれます。
+                  </p>  
+                  <img src ="<%= require('/src/images/htmlbasic.png')%>"alt="Description of image" ></img>              
+                  <h2>HTML要素</h2>
+                  <p class="text">
+                    &emsp;HTMLでは、タグを使うことで文章に意味を持たせることができます。タグとは<span style="background-color: gainsboro;">&lt;</span>と<span style="background-color: gainsboro;">&gt;</span>
+                    で囲まれた英数字のまとまりで&lt;tag&gt;内容&lt;/tag&gt;のように書かれた場合&lt;tag&gt;を
+                    開始タグ&lt;/tag&gt;を終了タグと呼びます。そしてこの開始タグと終了タグの間に含まれる内容を<strong>要素</strong>と呼びます。
+                    開始タグと終了タグの間にはテキストや要素、別のタグを入れることができます。
                   </p>
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: none;">
                 <section>
-                  <h3>HTML</h3>
+                  <h2>実際に要素を書き換えてみよう</h2>
                   <p>
-                    まずは&lt;table&gt;などを利用して表を作ってみましょう。<br>
-                    その後、&lt;input&gt;を使って値を入力する箇所を、&lt;button&gt;を使って計算を行うボタンを、&lt;select&gt;で計算方法を選べるメニューを作成します。&lt;input&gt;には、type = numberを設定するとよいでしょう。<br>
-                    数値を取得する、計算結果を表示するためにidも設定しておきましょう。<br>
+                    &emsp;まずは実際に要素を書き換えてみましょう。このポップアップを一度閉じてHello World!と書かれている部分を好きなように
+                    書き換えてみましょう。書き換えることに成功したら右上のヘルプをクリックしてもう一度この画面に戻ってきてください。
                   </p>
-                  <h3>CSS</h3>
-                  <p>
-                    つぎはCSSを使って自分の思うままにスタイルを設定してみましょう。&lt;style&gt;タグを使ってその中にCSSを記述します。<br>
-                    &lt;td&gt;や&lt;th&gt;にはborderを、&lt;table&gt;にはborder-collapse: collapseを設定することで、それらしいボーダーが表示されるようになります。<br>
-                    ある程度できたら次に進みましょう。<br>
+                  <h2>ここで使われているタグの説明</h2>
+                  <ul>
+                    <li>htmlタグ：この文章がhtmlであることを表します</li>
+                    <li>headタグ：ウェブサイトのタイトルやリンク情報を入れることができます</li>
+                    <li>tieileタグ：この文章のタイトルを表します</li>
+                    <li>bodyタグ：ウェブサイトの中身を表すタグでこの中に書いた要素がページ上に現れます。</li>
+                    <li>h1タグ：見出しを表します。数字を大きくするにつれて見出しの大きさが小さくなります。</li>
+                  </ul>
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: none;">
                 <section>
-                  <h3>値の取得</h3>
-                  <p>
-                    JavaScriptを使って、入力された値の取得、計算、表示を行いましょう。&lt;script&gt;タグを使ってその中にJavaScriptを記述します。<br>
-                    前もって設定しておいたidの要素を取得するには、「id="～"の要素」ブロックを使いましょう。必要であれば、取得した要素を変数にセットしましょう。<br>
-                    &lt;input&gt;に入力された値を読み取るには「要素内の値を取得」ブロックを、&lt;select&gt;の選択には「要素内の文章を取得」を使いましょう。<br>
-                  </p>
-                  <h3>計算</h3>
-                  <p>
-                    取得した値を使って計算を行いましょう。&lt;select&gt;で選択された値によって、計算方法を変えるには、logic内の「もし～実行～」ブロックなどを使って別々の計算をしましょう。<br>
-                    計算をする前に気をつけなければならないことがあります。それは、「要素内の値を取得」で取得した値は文字列として扱われるため、計算を行う際には数値に変換する必要があるということです。「～を～に変換」ブロックを使いましょう。<br>
-                    そうしたら、Math内のブロックで計算をしましょう。必要であれば、計算結果も変数にセットしておきましょう。<br>
-                  <h3>表示</h3>
-                  <p>
-                    最後に、計算結果を表示するようにしましょう。ボタンを押すと結果が表示されるようにするために、「～にイベントクリックが発生したときに～」ブロックを使いましょう。ここで注意点ですが、このブロックの内部で&lt;input&gt;の値を取得するようにしてください。そうしないと、取得されるのがinputに何も入っていない最初の一回だけとなり正常に動作しません。計算処理もこのブロックの中に入れ込みましょう。<br>
-                    表示については、「～を～に代入」ブロックを使って、要素内の値を変更することができます。<br>
-                  </p>
+                  <h2>持ち物リストを作ろう</h2>
+                <p>
+                  &emsp;ではさっそく下の画像のような持ち物リストを作ってみましょう。今回使用するブロックは&lt;h&gt;で囲まれたブロック、&lt;”&gt;で囲まれたブロック、&lt;ul&gt;で囲まれたブロックと
+                  &lt;li&gt;で囲まれたブロックです。左上のhtmlElementsの部分をクリックするとブロックが出てきます。&lt;ul&gt;で表されるulタグは箇条書きを使う際に用いられるタグです。そして&lt;li&gt;
+                  で表されるliタグはlist&nbsp;itemの略でulタグの中に入れることにより箇条書きで表示させる要素を入れることができます。まずはヒントを見ないでやってみましょう。わからなくなったらヒントを見てみましょう。
+                </p>
+                <img src ="<%= require('/src/images/motimono.png')%>"alt="Description of image" ></img>
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-3" style="display: none;">
                 <section>
-                  <h3>機能追加</h3>
-                  <p>
-                    ここまでできたら、さらに機能を追加してみましょう。<br>
-                    「こんなのができたらいいな～」、「こんな機能があったら便利だな～」と想像を膨らませ、趣くままに作ってみましょう。<br>
-                    考えられる機能としては例えば、行の追加や削除機能、列の追加や削除機能、セルの色を変える機能などが挙げられます。<br>
-                  </p>
+                <h2>ヒント</h2>
+                <p>
+                  &lt;h1&gt;ブロックの中には&lt;"&gt;で囲まれたテキストブロックのみを入れます。&lt;ul&gt;ブロックはh1ブロックの下において&lt;li&gt;ブロックはulブロックの中に入れます。
+                </p>
+                <img src ="<%= require('/src/images/kuttukekata.png')%>"alt="Description of image" ></img>
                 </section>
               </div>
             </div>
