共有時のUIを調整

--- a/frontend/src/sandbox/index.html
+++ b/frontend/src/sandbox/index.html
@@ -62,6 +62,9 @@
             <button id="submit-button" type="submit">共有する</button>
           </form>
         </div>
+        <div id="loading-spinner"></div>
+        <div id="loading-overlay"></div>
+        <div id="success-message">共有が成功しました！</div>
       </div>
     </div>
   </body>
