--- a/frontend/src/tutorial/html-introduction/index.html
+++ b/frontend/src/tutorial/html-introduction/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>チュートリアル：表計算</title>
+    <title>チュートリアル：HTMLについて知ろう</title>
   </head>
   <body>
     <div id="content" style="visibility: hidden;">
