少しととのえた

--- a/frontend/src/tutorial/html-introduction/index.html
+++ b/frontend/src/tutorial/html-introduction/index.html
@@ -105,7 +105,7 @@
                   <h2>持ち物リストを作ろう</h2>
                 <p>
                   &emsp;ではさっそく下の画像のような持ち物リストを作ってみましょう。今回使用するブロックは&lt;h&gt;で囲まれたブロック、&lt;”&gt;で囲まれたブロック、&lt;ul&gt;で囲まれたブロックと
-                  &lt;li&gt;で囲まれたブロックです。左上のhtmlElementsの部分をクリックするとブロックが出てきます。&lt;ul&gt;で表されるulタグは箇条書きを使う際に用いられるタグです。そして&lt;li&gt;
+                  &lt;li&gt;で囲まれたブロックです。左上のHTML要素の部分をクリックするとブロックが出てきます。&lt;ul&gt;で表されるulタグは箇条書きを使う際に用いられるタグです。そして&lt;li&gt;
                   で表されるliタグはlist&nbsp;itemの略でulタグの中に入れることにより箇条書きで表示させる要素を入れることができます。まずはヒントを見ないでやってみましょう。わからなくなったらヒントを見てみましょう。
                 </p>
                 <img src ="<%= require('/src/images/motimono.png')%>"alt="Description of image" ></img>
@@ -115,7 +115,7 @@
                 <section>
                 <h2>ヒント</h2>
                 <p>
-                  &lt;h1&gt;ブロックの中には&lt;"&gt;で囲まれたテキストブロックのみを入れます。&lt;ul&gt;ブロックはh1ブロックの下において&lt;li&gt;ブロックはulブロックの中に入れます。
+                  &lt;h1&gt;ブロックの中には&lt;"&gt;で囲まれたテキストブロックのみを入れます。&lt;ul&gt;ブロックはh1ブロックの下において&lt;li&gt;ブロックは下のようにulブロックの中に入れます。
                 </p>
                 <img src ="<%= require('/src/images/kuttukekata.png')%>"alt="Description of image" ></img>
                 </section>
